rm unennecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@
 ################
 *~
 
+# root output files #
+#####################
+*.root
+
 # Final executable #
 ####################
 CfBackgroundFlow
